# patina

./: .gitignore  .markdownlint.yml  Cargo.toml  cspell.yml
.github/: release-draft-config.yml
.github/workflows/: calculate-unsafe-code.yml  ci-workflow.yml  crate-version-update.yml  publish-mdbook.yml  publish-release.yml  rust-version-check.yml
components/patina_mm/src/: config.rs
components/patina_mm/src/component/: sw_mmi_manager.rs
components/patina_mm/src/protocol/: mm_comm_buffer_update.rs
components/patina_performance/: Cargo.toml
components/patina_performance/src/: mm.rs
components/patina_performance/src/component/: performance.rs
components/patina_smbios/src/: component.rs  lib.rs  manager.rs  service.rs
components/patina_smbios/src/manager/: core.rs
core/patina_debugger/src/: transport.rs
core/patina_stacktrace/: README.md
core/patina_stacktrace/resolve_stacktrace/: Cargo.toml  resolve_stacktrace.cmd  resolve_stacktrace.sh
core/patina_stacktrace/resolve_stacktrace/src/: main.rs
docs/src/: introduction.md
docs/src/background/: uefi_memory_safety_case_studies.md
patina_dxe_core/src/: dispatcher.rs  events.rs  gcd.rs  image.rs  memory_attributes_protocol.rs  memory_manager.rs  misc_boot_services.rs  runtime.rs
patina_dxe_core/src/gcd/: spin_locked_gcd.rs
sdk/patina/src/: boot_services.rs  efi_types.rs
sdk/patina/src/boot_services/: allocation.rs  boxed.rs  global_allocator.rs
sdk/patina/src/pi/: dxe_services.rs
sdk/patina_ffs_extractors/src/: brotli.rs  composite.rs  crc32.rs  lib.rs  lzma.rs
sdk/patina_macro/: README.md
(+4 files in other folders)
